# htfs

./: Cargo.toml  README.md  flake.nix
migrations/: 1_file-attrs.sql  2_file-names.sql  4_tags.sql  7_file-contents.sql  migrate.sql
src/: db_types.rs  fs.rs  lib.rs  macros.rs  main.rs  test_db.rs  test_fs.rs
src/db_helpers/: mod.rs  types.rs
tests/: integration_tests.rs
tests/fs_tests/: mod.rs  rename.rs  setattr.rs  write.rs
tests/fs_tests/prelude/: macros.rs  mod.rs
tests/prelude/: macros.rs  mod.rs
