[package]
name = "tfs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.169" # sqlx sub-dependency
fuser = "0.15.1"
async-std = "1.13.0" # sqlx sub-dependency
sqlx = { version = "0.8.3", features = [
  "macros",
  "runtime-async-std",
  "sqlite",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
