[package]
name = "htfs"
version = "0.1.0"
edition = "2024"

[dependencies]
# fuser dependency
libc = "0.2.172"
fuser = "0.15.1"
# sqlx dependency
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
